# Calculator

./: .gitignore  CMakeLists.txt  README.md  array.h  calculation.h  calculator.cpp  calculator.h  defines.h  expression.h  function.h  main.cpp  matrix.h  polynomial.h  stack.h  test.cpp  variable.h  vector.h
